# Practices

./: .gitignore  README.md  package-lock.json
Bash/: Practice.command  argument.sh  dirname.sh
Bash Script for Projects/: Build+Cook.command  BuildAll.command  BuildServer.command  Cook.command  CreateUE4Git.command  DeleteLocalBranch.command  DisplaySelfNotification.command  GenerateProject.command  GitGC.command  LaunchClient.command  LaunchClientWithAccount.command  LaunchClientWithAccount2.command  LaunchEditor.command  LaunchEditorServer.command  LaunchServer.command  OneClick+Client+Server.command  PackMacServer.command  Server+Client.command  UE4BuildAll.command
Bash/Bash Script for Projects/: BuildDebugEditor.command  CookServer.command  Editor+Server.command  Pull.command  UE4BuildEditor.command  iOSPack-Development.command
Batch/: DemoCD.bat
C++/: SyncSettings-Utilities.ffs_gui
C++/BitwiseNOT/: BitwiseNOTMain.cpp  CMakelists.txt
C++/CppFriend/: FriendMain.cpp
C++/CppMove/: CMakelists.txt  CppMoveMain.cpp  TestClass.cpp
C++/CppStdUnique/: StdUniqueMain.cpp
C++/CppStringLiteral/: CMakelists.txt  CppStringLiteralMain.cpp
C++/CppUnion/: CMakelists.txt  UnionMain.cpp
C++/Endianness/: CMakelists.txt
C++/Exception/: Exception.cpp  Exception.sln  Exception.vcxproj  Exception.vcxproj.filters  stdafx.h
C++/GenericFunctor/: GenericBinder.h  GenericFunctor.h  GenericFunctor.sln  GenericFunctor.vcxproj  GenericFunctor.vcxproj.filters  ReadMe.txt  main.cpp  stdafx.cpp
C++/GlobalStatic/: CMakelists.txt  DeclareStatic.cpp  DeclareStatic.h  GlobalStaticMain.cpp
C++/GlobalStatic/Utilities/: CMakeLists.txt
C++/GlobalStatic/Utilities/Public/: TemplateType2String.h  TypeDefine.h
C++/HeapCorruption/: HeapCorruption.sln
C++/Iteration/: CMakelists.txt  IterationMain.cpp
C++/MemoryAllocation/: MemoryAllocation.sln
C++/Remainder/: CMakelists.txt  RemainderMain.cpp
C++/SimpleLocalization/: SimpleLocalization.sln
C++/SimpleOpenMP/: SimpleOpenMP.sln
C++/StdContainer/: CMakelists.txt  StdContainerMain.cpp
C++/StdDeclType/: CMakelists.txt  StdDeclTypeMain.cpp
C++/StdForward/: StdForwardMain.cpp
C++/StdSort/: CMakelists.txt  StdSortMain.cpp
C++/TemplateStaticMember/: ReadMe.txt  TemplateStaticMember.cpp  TemplateStaticMember.sln  TemplateStaticMember.vcxproj  TemplateStaticMember.vcxproj.filters  stdafx.cpp
C++/TypeTraits/: CMakelists.txt  TypeTraitsMain.cpp
C++/Utilities/: CMakeLists.txt
C++/Utilities/Public/: Type2String.h  TypeDefine.h
C++/binary-serach/: binary-search.cpp
C++/cin/: cin.cpp
C++/exec/: exec1.cpp  exec2.cpp
C++/fork/: main.cpp
C++/run-length/: run-length.cpp
CMake/: CMakeLists.txt  CleanAll.command
CMake/inc/TestLib/: TestLib.h
CMake/src/: CMakeConfig.h  CMakeConfig.h.in  CMakeLists.txt  main.cpp
CMake/src/TestLib/: CMakeLists.txt  TestLib.cpp
CppFriend/: CMakelists.txt
CppMove/: CMakelists.txt  CppMoveMain.cpp
CppStdUnique/: CMakelists.txt
CppTemplate/: CMakelists.txt  CppTemplateMain.cpp
Django/generic_view/: db.sqlite3
Endianness/: EndiannessMain.cpp
Html5/: Index.html
JavaScript/JavaScriptTutorial/: Index.html  class_demo.js  data_types.js  date.js  decorators_forwarding_call_apply.js  function_demo.js  fundamentals.js  hello_world.js  import_demo.js  json.js  object_properties_configuration.js  objects_basics.js  package-lock.json  prototypes_inheritance.js
LinuxCPP/HelloWorld/: HelloWorld
LinuxCPP/HelloWorld2/: main.c  makefile
MakeTarBall/main-0.1/: Makefile  cos_value.c  main  main.c  sin_value.c
MakeTarBall/ntp-4.2.8p3/: Makefile  config.h  config.status  libtool
PHP/: PDO_Demo.php  advanced.php  arrayDemo.php  arrayDemo2.php  assertDemo.php  basic.php  bcmath_demo.php  callableDemo.php  callbacks.php  cloneDemo.php  debuggingDemo.php  envDemo.php  exitDemo.php  floating_precision_demo.php  floating_precision_tutorial.php  functionArrayDemo.php  index.php  jsonDemo.php  phpinfo.txt  profilingDemo.php  stringDemo.php  temp.php  traitDemo.php  unicodeDemo.php  variableLengthArgDemo.php  variableScope.php  web_basic.php
PHP/include/: base_class.php  env.php  extended_class.php  interface.php
PHP/tutor/: array_fill_map.php
Python/: boolean_demo.py  classes_objects_demo.py  collections_demo.py  conditions_demo.py  dates_demo.py  exception_demo.py  generator_demo.py  hello_world.py  nowith.json  operators_demo.py  requirements.txt  syntax_comments_demo.py  variables_data_types_demo.py  with.json
Python/django-tour/: README.md  djangotour.key  manage.py  secretkey.txt
Python/file_handling/: fafafa.json  main.py
Python/modules/: main.py
Python/tour/: Pipfile  api-request-demo.py  classes_objects_demo.py  conditional-demo.py  dict-demo.py  env-demo.py  error-handling-demo.py  exception_demo.py  function-demo.py  functions_demo.py  helloworld.py  iterators_demo.py  list-demo.py  list-for-loop-demo.py  set-demo.py  string-number-demo.py  string_demo.py  test-assert.py  test_dict.py  test_dir.py  (+17 more)
Redis/: practice.sh
SQL/: del_account_join.sh  del_trans_record.sh  describe.sh  find-tables.sh  group.sh  insert_account.sh  practice.sh  query_3rd_account_join.sh  query_account.sh  query_account_join.sh  query_test.sh  update.sh
Shell/: Practice.command  SubFunction.command  dirname.sh  timestamp.sh
SqlFile/: dev2 Session.sql  game_writeLogs_v2.sql  loki.sql  metis_example.sql  stage Session.sql
StdContainer/: StdContainerMain.cpp
StdForward/: CMakelists.txt
StdSort/: CMakelists.txt  StdSortMain.cpp
TypeTraits/: TypeTraitsMain.cpp
VisualStudioCodeCPP/: CMakelists.txt  helloworld.cpp
k8s/: mongo.yaml
mermaid/: class.md  entity-relationship.md  flowchart.md  sequence.md
poco/: CMakelists.txt  main.cpp
protobuf/: go.mod  tutorial.proto
terraform/: .gitignore
typescript/: tsconfig.json
vagrant/: Vagrantfile
(+1132 files in other folders)
